deploys/cilist-fe.yaml
apiVersion: v1
kind: Service
metadata:
  name: cilist-fe
  namespace: production
spec:
  selector:
    app: cilist-fe
  ports:
  - port: 80
    targetPort: 80
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cilist-fe
  namespace: production
spec:
  selector:
    matchLabels:
      app: cilist-fe
  template:
    metadata:
      labels:
        app: cilist-fe
    spec:
      containers:
      - name: cilist-fe
        image: fataraz/cilist-fe:imagetag
        imagePullPolicy: Always
        resources:
          limits:
            memory: "1024Mi"
            cpu: "1000m"
        ports:
        - containerPort: 80
      #   volumeMounts:
      #     - mountPath: /app/.env
      #       name: cm-cilist-fe
      #       subPath: .env
      # volumes:
      #   - name: cm-cilist-fe
      #     configMap:
      #       name: configmap-cilist-fe
